# freeze-daemon

./: CMakeLists.txt
.github/workflows/: build.yml
src/: main.cpp
src/api/: http_server.h
src/core/: app_label_cache.h
src/platform/: freeze_monitor.bpf.c
